tests/invalid/Old_Invalid_1.whiley
function f(&int p) -> int
// old doesn't make sense in this context
ensures *p == old(*p):
    //
    return 0